--- a/中日英魔法大典(整合版).toml
+++ b/中日英魔法大典(整合版).toml
@@ -5,6 +5,9 @@ version = "1.0.0"
 date = 2024-12-12
 update_date = 2024-12-12
 desc = "https://github.com/errrr-er/alll/tree/main"
+updateUrls = [
+  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/%E4%B8%AD%E6%97%A5%E8%8B%B1%E9%AD%94%E6%B3%95%E5%A4%A7%E5%85%B8(%E6%95%B4%E5%90%88%E7%89%88).toml"
+]
 
 
 ["魔典整合"]
