--- a/magic_all.toml
+++ b/magic_all.toml
@@ -6,7 +6,8 @@ date = 2024-12-12
 update_date = 2024-12-12
 desc = "https://github.com/errrr-er/alll/tree/main"
 updateUrls = [
-  ""
+  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic_all.toml",
+  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic_all.toml"
 ]
 
 
@@ -80,6 +81,267 @@ options_urls = [
   "",
   "https://ghp.ci/"
 ]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
 
 
 
