--- a/magic/CJE/magic_all.toml
+++ b/magic/CJE/magic_all.toml
@@ -4,7 +4,7 @@ author = ""
 version = "0.0.0"
 date = 2024-12-12
 update_date = 2024-12-12
-desc = "https://github.com/errrr-er/alll/tree/main"
+desc = "\n详见README https://github.com/errrr-er/alll/tree/main \n修改/反馈 https://box.n3ko.cc/_/no_reply31cat"
 updateUrls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic_all.toml",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic_all.toml"
