--- a/magic/CJE/magic_all.toml
+++ b/magic/CJE/magic_all.toml
@@ -1,11 +1,11 @@
 [meta]
 title = "中日英魔法大典(整合版)"
-author = ""
+author = "裗浳(3612464276)"
 version = "0.0.0"
 date = 2024-12-12
 update_date = 2024-12-12
-desc = "\n详见README https://github.com/errrr-er/alll/tree/main \n修改/反馈 https://box.n3ko.cc/_/no_reply31cat"
-updateUrls = [
+desc = "https://github.com/errrr-er/alll/tree/main"
+update_Urls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic_all.toml",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic_all.toml"
 ]
@@ -17,8 +17,6 @@ updateUrls = [
 ["魔典整合"]
 export = true
 visible = true
-aliases = []
-options = []
 
 # 提取云
 cloud_extra = true
@@ -69,288 +67,6 @@ options_urls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/UNMASKDEMON.json",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/UNMASKDEMON.json"
 ]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
-
-
-
-[""]
-export = true
-visible = true
-aliases = [ "","",""]
-options = []
-
-# 提取云
-cloud_extra = true
-# 云本去重
-dictinct = true
-# github raw 链接
-options_urls = [
-  "",
-  "https://ghp.ci/"
-]
-
-
 
 
 
