--- a/magic/CJE/magic_all.toml
+++ b/magic/CJE/magic_all.toml
@@ -70,3 +70,285 @@ options_urls = [
 
 
 
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
+[""]
+export = true
+visible = true
+aliases = [ "","",""]
+options = []
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "",
+  "https://ghp.ci/"
+]
+
+
+
+
+
